# qemu-semester-project

./: .gitignore  .gitmodules  Makefile  README.md  afl-cmplog.c  afl-cmplog.h  afl.c  afl.h  cmplog-bootstrapper.c  disas.c  disas.h  fs.c  fs.h  plugin.c  start.ps1  types.h  zsh.ps1
benchmarks/graph-cmplog-disascache/: index.html
benchmarks/graph-cmplog-disascache-disabled/: index.html
benchmarks/graph-fork-syscall/: index.html
benchmarks/graph-fork-vcpu/: index.html
benchmarks/graph-syscall-fork-and-instr-program-only/: index.html
benchmarks/inscount/: .gitignore  Makefile  assemble.py  benchmark.ipynb  benchmark_tb1.ipynb  inscount.c  inscount.patch  patch.sh  plot.ipynb  qemu_0.json  qemu_1000.json  qemu_10000.json  qemu_100000.json  qemu_12500.json  qemu_15000.json  qemu_17500.json  qemu_2000.json  qemu_20000.json  qemu_22500.json  qemu_25000.json  qemu_27500.json  qemu_3000.json  qemu_30000.json  qemu_32500.json  qemu_35000.json  qemu_37500.json  qemu_4000.json  qemu_40000.json  qemu_42500.json  qemu_45000.json  qemu_47500.json  qemu_5000.json  qemu_50000.json  qemu_6000.json  qemu_7000.json  qemu_75000.json  qemu_8000.json  qemu_9000.json  qemu_patched_0.json  (+100 more)
code/fuzzer-rs/: Cargo.toml
code/fuzzer-rs/src/: main.rs
qemu-proposal-patches/: 0001-Expose-a-prefetch-API.patch  0001-current-work.patch  0002-sometehing.patch  0003-prechain-doesnt-work-but-api-here.patch  0004-exposing-tb_exit.patch
report/: bib.bib  report.typ
targets/: coverage-long.c  coverage-strcmp.c  coverage.c
test-targets/: coverage-long.c  fork.c  get-loop.c
(+28 files in other folders)
